--- a/public/lessons-content/hashage.html
+++ b/public/lessons-content/hashage.html
@@ -100,7 +100,7 @@
         Les rules sont un palliatif à cela, car elles permettent de générer des candidats selon des règles spécifiques pour, par exemple, ajouter des préfixes et suffixes courant ou bien tester des remplacements de caractères.
     </p>
     <p>
-        Sauf pour un besoin spécifique, vous pouvez utiliser des rules pré-faites comme OneRuleToRuleThemAll. Vous pouvez trouver davantage d’informations quand à l’écriture de rules ici : https://hashcat.net/ wiki/doku.php?id=rule_based_attack
+        Sauf pour un besoin spécifique, vous pouvez utiliser des rules pré-faites comme OneRuleToRuleThemAll. Vous pouvez trouver davantage d’informations quand à l’écriture de rules <a href="https://hashcat.net/wiki/doku.php?id=rule_based_attack">ici</a>.
     </p>
 
     <h3>Collisions</h3>
@@ -192,7 +192,7 @@
         Note : On ne parle pas d’un blocage de 10 minutes, plutôt d’un mail demandant à l’utilisateur de débloquer son compte
     </p>
     <p>
-        Pour plus d’informations : https://www.cnil.fr/fr/mots-de-passe-une-nouvelle-recommandation-pour-maitriser-sa-securite
+        <a href="https://www.cnil.fr/fr/mots-de-passe-une-nouvelle-recommandation-pour-maitriser-sa-securite">Pour plus d’informations </a>.
     </p>
 </section>
 
