--- a/public/lessons-content/security-passwords.html
+++ b/public/lessons-content/security-passwords.html
@@ -1,9 +1,7 @@
-<section class="content-block">
-    <h2 class="flex items-center">
-        <i class="fas fa-info-circle mr-3 text-2xl" aria-hidden="true"></i>Introduction
-    </h2>
+<div class="content-block">
+    <h2><i class="fas fa-info-circle" aria-hidden="true"></i>Introduction</h2>
     <p>
-        Dans notre quotidien, nous utilisons de plus en plus d'applications et de services en ligne : e-mails, réseaux sociaux, banques, achats en ligne, et bien d'autres. Chacun de ces services demande un mot de passe. Ces mots de passe sont votre première ligne de défense contre les cyberattaques, le vol d'identité et la fraude. Ignorer la bonne gestion de ces "clés" peut avoir des conséquences graves, comme la perte de données, l'accès non autorisé à vos comptes bancaires, ou l'utilisation de votre identité pour commettre des fraudes. C'est pourquoi cette leçon est si importante : elle vous donnera les outils nécessaires pour protéger efficacement votre vie numérique.
+        Dans notre quotidien, nous utilisons de plus en plus d'applications et de services en ligne : e-mails, réseaux sociaux, banques, achats en ligne, et bien d'autres. Chacun de ces services demande un mot de passe. Ces mots de passe sont votre première ligne de défense contre les cyberattaques, le vol d'identité et la fraude. Ignorer la bonne gestion de ces "clés" peut avoir de graves conséquences, comme la perte de données, l'accès non autorisé à vos comptes bancaires, ou l'utilisation de votre identité pour commettre des fraudes.
     </p>
     <p>
         Un mot de passe faible est une invitation ouverte aux pirates informatiques. Voici quelques exemples simples de ce qui peut arriver si vos mots de passe sont compromis :
@@ -16,44 +14,26 @@
     <p>
         Chaque jour, des millions de tentatives de piratage ont lieu, et beaucoup réussissent à cause de mots de passe trop simples ou réutilisés. Il est donc important de savoir comment construire et maintenir des mots de passe robustes.
     </p>
-</section>
-
-<section class="content-block">
-    <h2 class="flex items-center">
-        <i class="fas fa-lock mr-3 text-2xl" aria-hidden="true"></i>Création d'un mot de passe Robuste
-    </h2>
+</div>
+<div class="content-block">
+    <h2><i class="fas fa-lock" aria-hidden="true"></i>Création d'un mot de passe Robuste</h2>
     <h3 class="mt-6">Caractéristiques d'un bon mot de passe</h3>
     <p>
         Un mot de passe robuste est votre meilleure défense. Voici ses caractéristiques principales :
     </p>
     <ul>
-        <li><strong>Longueur :</strong> Un mot de passe doit être long. Nous recommandons un minimum de <strong>12 à 16 caractères</strong>. Plus il est long, plus il est difficile à deviner ou à "casser" par des ordinateurs puissants. Chaque caractère supplémentaire augmente considérablement le temps nécessaire à un pirate pour le découvrir.</li>
-        <li><strong>Complexité :</strong> Un bon mot de passe ne contient pas que des lettres. Il doit inclure un mélange varié de :
-            <ul>
-                <li><strong>Majuscules</strong> (A, B, C...)</li>
-                <li><strong>Minuscules</strong> (a, b, c...)</li>
-                <li><strong>Chiffres</strong> (0, 1, 2...)</li>
-                <li><strong>Caractères spéciaux</strong> (par exemple : !, @, #, $, %, ^, &, *, (, ), -, _, =, +, [, ], {, }, |, \, ;, :, ', ", &lt;, &gt;, ,, ., ?, /)</li>
-            </ul>
-        </li>
+        <li><strong>Longueur :</strong> Un mot de passe doit être long. Nous recommandons un minimum de 12 à 16 caractères. Plus il est long, plus il est difficile à deviner ou à "casser" par des ordinateurs puissants. Chaque caractère supplémentaire augmente considérablement le temps nécessaire à un pirate pour le découvrir.</li>
+        <li><strong>Complexité :</strong> Un bon mot de passe ne contient pas que des lettres. Il doit inclure un mélange varié de majuscules (A, B, C...), de minuscules (a, b, c...), de chiffres (0, 1, 2...), et de caractères spéciaux (par exemple : !, @, #, $, %, ^, &, *, (, ), -, _, =, +, [, ], {, }, |, \, ;, :, ', ", &lt;, &gt;, ,, ., ?, /).</li>
         <li><strong>Originalité :</strong> N'utilisez jamais d'informations personnelles évidentes comme votre nom, votre date de naissance, le nom de votre animal de compagnie, ou des adresses. Ces informations sont souvent faciles à trouver sur les réseaux sociaux ou dans des bases de données publiques.</li>
-        <li><strong>Unicité :</strong> C'est une règle d'or : utilisez un mot de passe <strong>différent</strong> pour <strong>chaque</strong> compte ! Si un pirate réussit à découvrir le mot de passe d'un de vos comptes (par exemple, un forum peu important), il tentera ensuite d'utiliser ce même mot de passe sur tous vos autres comptes (e-mail, banque, etc.). Si vos mots de passe sont uniques, un seul compte sera compromis, et non tous vos comptes.</li>
+        <li><strong>Unicité :</strong> C'est une règle d'or : utilisez un mot de passe différent pour chaque compte ! Si un pirate réussit à découvrir le mot de passe d'un de vos comptes (par exemple, un forum peu important), il tentera ensuite d'utiliser ce même mot de passe sur tous vos autres comptes (e-mail, banque, etc.). Si vos mots de passe sont uniques, un seul compte sera compromis, et non tous vos comptes.</li>
     </ul>
     <h3>Techniques pour créer des mots de passe robustes et mémorisables</h3>
     <p>
-        Il peut sembler difficile de créer des mots de passe complexes et de s'en souvenir. Heureusement, il existe des techniques simples :
+        Il peut sembler difficile de créer des mots de passe complexes et de s'en souvenir. Heureusement, il existe des techniques simples. La phrase de passe est l'une des méthodes les plus efficaces. Choisissez une phrase longue, facile à retenir pour vous, mais qui n'a pas de sens évident pour les autres. Ensuite, transformez-la en un mot de passe en utilisant les initiales, des chiffres, des caractères spéciaux et des majuscules/minuscules.
     </p>
-    <ul>
-        <li><strong>La phrase de passe :</strong> C'est l'une des méthodes les plus efficaces. Choisissez une phrase longue, facile à retenir pour vous, mais qui n'a pas de sens évident pour les autres. Ensuite, transformez-la en un mot de passe en utilisant les initiales, des chiffres, des caractères spéciaux et des majuscules/minuscules.
-            <ul>
-                <li><em>Exemple :</em> "Mon chien s'appelle Rex, il est né en 2020 et aime les croquettes !"</li>
-                <li><em>Mot de passe :</em> <code>McsaR,iEn2020&alc!</code> (plus facile à retenir qu'une suite aléatoire, mais très fort).</li>
-            </ul>
-        </li>
-        <li><strong>Première lettre de chaque mot :</strong> Prenez la première lettre de chaque mot d'une phrase mémorable et ajoutez des chiffres ou des caractères spéciaux.</li>
-        <li><strong>Remplacements simples :</strong> Remplacez certaines lettres par des chiffres ou des symboles qui leur ressemblent visuellement (par exemple, "e" par "3", "a" par "@", "i" par "1", "o" par "0", "s" par "$").</li>
-        <li><strong>Mixte :</strong> Combinez plusieurs de ces techniques pour une robustesse maximale et une meilleure mémorisation.</li>
-    </ul>
+    <p>
+        Par exemple : "Mon chien s'appelle Rex, il est né en 2020 et aime les croquettes !" devient le mot de passe : <code>McsaR,iEn2020&alc!</code>. C'est plus facile à retenir qu'une suite aléatoire, mais très fort. Vous pouvez aussi utiliser la technique de la première lettre de chaque mot ou des remplacements simples (remplacer le "e" par "3", le "a" par "@", etc.). La meilleure approche est de combiner plusieurs de ces techniques pour une robustesse maximale et une meilleure mémorisation.
+    </p>
     <h3>Ce qu'il ne faut PAS faire</h3>
     <p>
         Pour votre sécurité, évitez à tout prix ces erreurs courantes :
@@ -63,61 +43,51 @@
         <li><strong>Informations personnelles facilement trouvables :</strong> N'utilisez pas votre date de naissance, votre numéro de téléphone, ou des informations que l'on pourrait trouver sur vos réseaux sociaux.</li>
         <li><strong>Réutiliser le même mot de passe partout :</strong> Comme mentionné, c'est l'erreur la plus dangereuse. Si un site est piraté et que votre mot de passe est exposé, tous les autres comptes utilisant le même mot de passe seront également vulnérables.</li>
     </ul>
-</section>
-
-<section class="content-block">
-    <h2 class="flex items-center">
-        <i class="fas fa-key mr-3 text-2xl" aria-hidden="true"></i>Gestion et Utilisation des Mots de Passe
-    </h2>
+</div>
+<div class="content-block">
+    <h2><i class="fas fa-key" aria-hidden="true"></i>Gestion et Utilisation des Mots de Passe</h2>
     <h3 class="mt-6">Pourquoi ne faut-il pas écrire ses mots de passe sur un post-it ?</h3>
     <p>
         Il est tentant d'écrire un mot de passe complexe sur un post-it collé à votre écran ou sous votre clavier. Cependant, c'est extrêmement dangereux ! Si quelqu'un accède physiquement à votre espace de travail, toutes vos informations sont à portée de main. Les risques incluent la perte, le vol, ou l'accès non autorisé par des personnes mal intentionnées. De plus, un post-it peut être perdu ou jeté par erreur.
     </p>
     <h3>Les gestionnaires de mots de passe</h3>
     <p>
-        Alors, comment retenir des dizaines de mots de passe longs, complexes et uniques ? La réponse est simple : <strong>utilisez un gestionnaire de mots de passe !</strong>
+        Alors, comment retenir des dizaines de mots de passe longs, complexes et uniques ? La réponse est simple : utilisez un gestionnaire de mots de passe !
+    </p>
+    <p>
+        Un gestionnaire de mots de passe est une application ou un logiciel qui fonctionne comme un "coffre-fort numérique" sécurisé. Il stocke tous vos mots de passe de manière chiffrée. Vous n'avez plus qu'un seul mot de passe à retenir : le "mot de passe maître" qui ouvre ce coffre-fort. Les avantages sont nombreux :
     </p>
     <ul>
-        <li><strong>Qu'est-ce que c'est ?</strong> Un gestionnaire de mots de passe est une application ou un logiciel qui fonctionne comme un "coffre-fort numérique" sécurisé. Il stocke tous vos mots de passe de manière chiffrée. Vous n'avez plus qu'un seul mot de passe à retenir : le "mot de passe maître" qui ouvre ce coffre-fort.</li>
-        <li><strong>Avantages :</strong>
-            <ul>
-                <li><strong>Génération de mots de passe complexes :</strong> Le gestionnaire peut créer automatiquement des mots de passe ultra-sécurisés, longs et aléatoires, sans que vous ayez à les mémoriser.</li>
-                <li><strong>Stockage sécurisé :</strong> Vos mots de passe sont chiffrés et stockés en toute sécurité, à l'abri des regards indiscrets.</li>
-                <li><strong>Remplissage automatique :</strong> Le gestionnaire peut remplir automatiquement vos identifiants et mots de passe sur les sites web, vous faisant gagner du temps et évitant les erreurs de frappe.</li>
-                <li><strong>Un seul mot de passe maître à retenir :</strong> Toute la complexité est gérée par l'outil, vous n'avez qu'à vous souvenir de votre mot de passe maître (qui, lui, doit être <em>extrêmement</em> fort !).</li>
-            </ul>
-        </li>
-        <li><strong>Exemples populaires :</strong> Il existe de nombreux gestionnaires de mots de passe fiables, certains sont gratuits ou proposent des versions gratuites. Parmi les plus connus on peut citer : <strong>LastPass, Bitwarden</strong> et <strong>KeePass</strong>. N'hésitez pas à faire des recherches pour trouver celui qui correspond le mieux à vos besoins.</li>
+        <li><strong>Génération de mots de passe complexes :</strong> Le gestionnaire peut créer automatiquement des mots de passe ultra-sécurisés, longs et aléatoires, sans que vous ayez à les mémoriser.</li>
+        <li><strong>Stockage sécurisé :</strong> Vos mots de passe sont chiffrés et stockés en toute sécurité, à l'abri des regards indiscrets.</li>
+        <li><strong>Remplissage automatique :</strong> Le gestionnaire peut remplir automatiquement vos identifiants et mots de passe sur les sites web, vous faisant gagner du temps et évitant les erreurs de frappe.</li>
+        <li><strong>Un seul mot de passe maître à retenir :</strong> Toute la complexité est gérée par l'outil, vous n'avez qu'à vous souvenir de votre mot de passe maître (qui, lui, doit être extrêmement fort !).</li>
     </ul>
-    
+    <p>
+        Il existe de nombreux gestionnaires de mots de passe fiables, certains sont gratuits ou proposent des versions gratuites. Parmi les plus connus on peut citer : LastPass, Bitwarden et KeePass. N'hésitez pas à faire des recherches pour trouver celui qui correspond le mieux à vos besoins.
+    </p>
     <h3>L'authentification à deux facteurs (2FA/MFA)</h3>
     <p>
-        L'authentification à deux facteurs (2FA), parfois appelée authentification multi-facteurs (MFA), est une couche de sécurité supplémentaire et extrêmement importante.
+        L'authentification à deux facteurs (2FA), parfois appelée authentification multi-facteurs (MFA), est une couche de sécurité supplémentaire et extrêmement importante. Au lieu de simplement saisir un mot de passe, le 2FA exige une deuxième preuve de votre identité. Après avoir entré votre mot de passe, le service vous demande une deuxième information que seul vous possédez :
     </p>
     <ul>
-        <li><strong>Qu'est-ce que c'est ?</strong> Au lieu de simplement saisir un mot de passe, le 2FA exige une deuxième preuve de votre identité.
-        <li><strong>Comment ça fonctionne ?</strong> Après avoir entré votre mot de passe, le service vous demande une deuxième information que seul vous possédez :
-            <ul>
-                <li>Un code envoyé par <strong>SMS</strong> à votre téléphone.</li>
-                <li>Un code généré par une <strong>application d'authentification</strong> sur votre smartphone (comme Google Authenticator ou Authy).</li>
-                <li>Une <strong>clé de sécurité physique</strong> (un petit appareil USB).</li>
-            </ul>
-        </li>
-        <li><strong>Importance :</strong> Si, par malheur, un pirate réussissait à obtenir votre mot de passe, il ne pourrait toujours pas accéder à votre compte sans ce deuxième facteur. C'est un filet de sécurité essentiel qui rend le piratage beaucoup plus difficile. Activez le 2FA sur tous les comptes importants qui le proposent !</li>
+        <li>Un code envoyé par SMS à votre téléphone.</li>
+        <li>Un code généré par une application d'authentification sur votre smartphone (comme Google Authenticator ou Authy).</li>
+        <li>Une clé de sécurité physique (un petit appareil USB).</li>
     </ul>
-
+    <p>
+        C'est un filet de sécurité essentiel. Si, par malheur, un pirate réussissait à obtenir votre mot de passe, il ne pourrait toujours pas accéder à votre compte sans ce deuxième facteur. Cela rend le piratage beaucoup plus difficile. Activez le 2FA sur tous les comptes importants qui le proposent !
+    </p>
     <h3>Changement régulier des mots de passe</h3>
     <p>
-        Pendant longtemps, il était recommandé de changer ses mots de passe tous les trois mois. Cependant, cette recommandation a évolué. Aujourd'hui, les experts en sécurité s'accordent à dire que :
+        Pendant longtemps, il était recommandé de changer ses mots de passe tous les trois mois. Cependant, cette recommandation a évolué. Aujourd'hui, les experts en sécurité s'accordent à dire qu'il n'est pas nécessaire de changer systématiquement tous vos mots de passe si vous utilisez des mots de passe uniques et très forts. Des changements trop fréquents peuvent pousser les utilisateurs à choisir des mots de passe plus simples et plus faciles à mémoriser (et donc plus faibles).
     </p>
-    <p>Il n'est pas nécessaire de changer systématiquement tous vos mots de passe si vous utilisez des mots de passe uniques et très forts. Des changements trop fréquents peuvent pousser les utilisateurs à choisir des mots de passe plus simples et plus faciles à mémoriser (et donc plus faibles).</p>
-    <p>Le changement régulier est crucial si vous apprenez qu'un de vos comptes a été compromis lors d'une fuite de données (cela est souvent notifié par le service concerné, ou vous pouvez vérifier sur des sites dédiés comme "Have I Been Pwned?").</p>
-</section>
-
-<section class="content-block">
-    <h2 class="flex items-center">
-        <i class="fas fa-flag-checkered mr-3 text-2xl" aria-hidden="true"></i>Conclusion
-    </h2>
+    <p>
+        Le changement régulier est crucial si vous apprenez qu'un de vos comptes a été compromis lors d'une fuite de données (cela est souvent notifié par le service concerné, ou vous pouvez vérifier sur des sites dédiés comme "Have I Been Pwned?").
+    </p>
+</div>
+<div class="content-block">
+    <h2><i class="fas fa-flag-checkered" aria-hidden="true"></i>Conclusion</h2>
     <p>
         Pour récapituler les points les plus importants de cette leçon :
     </p>
@@ -131,8 +101,8 @@
         Il est temps de passer à l'action ! Ne vous sentez pas submergé, commencez petit :
     </p>
     <ul class="list-decimal list-inside text-gray-300 mb-4 pl-4">
-        <li class="mb-2"><strong>Priorisez :</strong> Commencez par renforcer les mots de passe de vos comptes les plus importants : votre e-mail principal (car il est souvent lié à la récupération de tous vos autres comptes) et vos comptes bancaires ou financiers.</li>
-        <li class="mb-2"><strong>Essayez un gestionnaire de mots de passe :</strong> Téléchargez et explorez l'un des gestionnaires mentionnés (LastPass, Bitwarden, KeePass) ou un autre que vous aurez recherché. Habituez-vous à son fonctionnement.</li>
-        <li class="mb-2"><strong>Activez le 2FA :</strong> Vérifiez les paramètres de sécurité de vos comptes importants et activez le 2FA partout où c'est possible.</li>
+        <li><strong>Priorisez :</strong> Commencez par renforcer les mots de passe de vos comptes les plus importants : votre e-mail principal (car il est souvent lié à la récupération de tous vos autres comptes) et vos comptes bancaires ou financiers.</li>
+        <li><strong>Essayez un gestionnaire de mots de passe :</strong> Téléchargez et explorez l'un des gestionnaires mentionnés (LastPass, Bitwarden, KeePass) ou un autre que vous aurez recherché. Habituez-vous à son fonctionnement.</li>
+        <li><strong>Activez le 2FA :</strong> Vérifiez les paramètres de sécurité de vos comptes importants et activez le 2FA partout où c'est possible.</li>
     </ul>
-</section>
+</div>
