--- a/public/lessons-content/forensics-intro.html
+++ b/public/lessons-content/forensics-intro.html
@@ -1,5 +1,5 @@
 <section class="content-block">
-    <h2><i class="fas fa-question-circle" aria-hidden="true"></i>Qu'est-ce que l’analyse forensique ?</h2>
+    <h2><i class="fas fa-info-circle" aria-hidden="true"></i>Qu'est-ce que l’analyse forensique ?</h2>
     <p>
         L'analyse forensique, aussi connue sous le nom de « criminalistique numérique », est la discipline qui consiste à collecter et à analyser les traces numériques laissées par des incidents tels que des cyberattaques, des fuites de données ou des fraudes internes.
     </p>
