--- a/public/lessons-content/osint-intro.html
+++ b/public/lessons-content/osint-intro.html
@@ -1,92 +1,84 @@
 <section class="content-block">
-	<h2><i class="fas fa-info-circle" aria-hidden="true"></i>Les Fondamentaux de l'OSINT</h2>
-	<p>
-		L'OSINT, ou Open Source Intelligence, est un terme qui peut sembler complexe, mais son concept est très simple :
-	</p>
-	<ul>
-		<li><strong>Définition :</strong> En français, on parle de Renseignement d'Origine Source Ouverte (ROSO). Il s'agit de toute information qui peut être légalement et publiquement collectée à partir de sources libres d'accès.</li>
-		<li><strong>L'information "ouverte" :</strong> Cela inclut une quantité massive de données : les sites web, les articles de presse, les publications sur les réseaux sociaux, les registres publics (entreprises, cadastre), les forums, les vidéos, les cartes, etc. Si vous n'avez pas besoin de mot de passe, de pirater un système ou de voler un accès pour y accéder, c'est une source ouverte.</li>
-		<li><strong>Différence entre information et renseignement :</strong> Une information est une donnée brute (ex: "une entreprise a posté 10 messages sur Twitter aujourd'hui"). Le renseignement est le résultat de l'analyse de ces informations, leur donnant un contexte et une signification (ex: "l'analyse des 10 tweets de l'entreprise révèle une nouvelle stratégie marketing ciblant les jeunes de 18-25 ans"). L'OSINT est le processus qui transforme l'information en renseignement.</li>
-	</ul>
-	<p>Ses usages sont vastes. Les journalistes l'utilisent pour vérifier des faits et mener des enquêtes, les recruteurs vérifient les antécédents des candidats, les entreprises analysent leurs concurrents. En cybersécurité, c'est la première étape (la reconnaissance) pour comprendre les vulnérabilités d'une cible.</p>
-	<p><strong>Exemple concret :</strong> L'organisation de journalisme d'investigation Bellingcat est un exemple célèbre. En utilisant uniquement des sources ouvertes (images satellites, publications sur les réseaux sociaux, vidéos YouTube), ils ont réussi à enquêter sur des conflits armés, des crashs d'avions et des attaques chimiques, prouvant ainsi la puissance de l'OSINT.</p>
+    <h2><i class="fas fa-info-circle" aria-hidden="true"></i>Les Fondamentaux de l'OSINT</h2>
+    <p>
+        L'OSINT, ou Open Source Intelligence, est un terme qui peut sembler complexe, mais son concept est très simple :
+    </p>
+    <ul>
+        <li><strong>Définition :</strong> En français, on parle de Renseignement d'Origine Source Ouverte (ROSO). Il s'agit de toute information qui peut être légalement et publiquement collectée à partir de sources libres d'accès.</li>
+        <li><strong>L'information "ouverte" :</strong> Cela inclut une quantité massive de données : les sites web, les articles de presse, les publications sur les réseaux sociaux, les registres publics, les forums, etc. Si vous n'avez pas besoin de mot de passe ou de pirater un système pour y accéder, c'est une source ouverte.</li>
+        <li><strong>Différence entre information et renseignement :</strong> L'OSINT est le processus qui transforme l'information brute en renseignement exploitable.</li>
+    </ul>
+<pre><code>[Information brute] Une photo est postée sur Instagram.
++ [Analyse] La photo montre un bâtiment. Les métadonnées indiquent une date. La légende mentionne un "nouveau projet".
+= [Renseignement] L'entreprise X a commencé la construction de son nouveau siège le 15 août à Lyon.</code></pre>
+    <p>Ses usages sont vastes. Les journalistes l'utilisent pour mener des enquêtes, les recruteurs vérifient les antécédents des candidats et les entreprises analysent leurs concurrents. En cybersécurité, c'est la première étape (la reconnaissance) pour comprendre les vulnérabilités d'une cible.</p>
 </section>
 <section class="content-block">
-	<h2><i class="fas fa-gavel" aria-hidden="true"></i>Le cadre légal et éthique</h2>
-	<p>Ce point est fondamental. La pratique de l'OSINT confère un accès significatif à l'information, ce qui impose une responsabilité et une rigueur exemplaires.</p>
-	<h3>Ce qui est permis et ce qui ne l'est pas</h3>
-	<p>La règle d'or est de ne jamais franchir la ligne de l'illégalité. Consulter un profil public sur Facebook est légal, mais essayer de deviner son mot de passe ou de le tromper pour qu'il vous donne accès à son compte privé (phishing) est illégal. En Europe, le RGPD (Règlement Général sur la Protection des Données) encadre strictement la collecte et le traitement des données personnelles. Même si une information est publique, son utilisation est réglementée.</p>
-	<h3>Considérations éthiques</h3>
-	<ul>
-		<li><strong>Respect de la vie privée :</strong> Ce n'est pas parce que vous <em>pouvez</em> trouver l'adresse personnelle de quelqu'un que vous <em>devez</em> le faire ou la partager. Demandez-vous toujours : "Quelle est l'intention derrière ma recherche ? Est-ce que je risque de causer du tort ?".</li>
-		<li><strong>Utilisation responsable :</strong> Les informations collectées ne doivent jamais être utilisées pour le harcèlement, l'intimidation ou la désinformation.</li>
-		<li><strong>Fixez-vous des limites :</strong> Avant de commencer une enquête, même pour vous entraîner, définissez ce que vous cherchez et pourquoi, et arrêtez-vous lorsque vous avez atteint votre objectif.</li>
-	</ul>
+    <h2><i class="fas fa-gavel" aria-hidden="true"></i>Le cadre légal et éthique</h2>
+    <p>Ce point est fondamental. La pratique de l'OSINT impose une responsabilité et une rigueur exemplaires.</p>
+    <h3>Ce qui est permis et ce qui ne l'est pas</h3>
+    <p>La règle d'or est de ne jamais franchir la ligne de l'illégalité. Consulter un profil public est légal, mais essayer de deviner son mot de passe ou de le tromper pour obtenir un accès (<code>phishing</code>) est illégal. En Europe, le <code>RGPD</code> (Règlement Général sur la Protection des Données) encadre strictement la collecte et le traitement des données personnelles.</p>
+    <h3>Considérations éthiques</h3>
+    <ul>
+        <li><strong>Respect de la vie privée :</strong> Ce n'est pas parce que vous <em>pouvez</em> trouver une information que vous <em>devez</em> le faire ou la partager.</li>
+        <li><strong>Utilisation responsable :</strong> Les informations collectées ne doivent jamais être utilisées pour le harcèlement, l'intimidation ou la désinformation.</li>
+        <li><strong>Fixez-vous des limites :</strong> Avant de commencer une enquête, définissez un objectif clair et arrêtez-vous lorsque vous l'avez atteint.</li>
+    </ul>
 </section>
 <section class="content-block">
-	<h2><i class="fas fa-sync" aria-hidden="true"></i>Le Cycle du Renseignement</h2>
-	<p>Toute enquête OSINT professionnelle suit un processus structuré pour être efficace.</p>
-	<ul>
-		<li><strong>Définition des besoins :</strong> Quelle est la question exacte à laquelle je dois répondre ? (ex: "Quelles sont les technologies utilisées par notre concurrent principal ?"). Un objectif clair évite de se perdre dans la masse d'informations.</li>
-		<li><strong>Collecte :</strong> C'est la phase de recherche active où l'on rassemble toutes les données brutes pertinentes à partir de différentes sources.</li>
-		<li><strong>Traitement :</strong> Les données collectées sont souvent désordonnées. Cette étape consiste à les organiser : les trier, les filtrer, les mettre dans un tableau, etc.</li>
-		<li><strong>Analyse :</strong> C'est le cœur du processus. On examine les données traitées pour y trouver des liens, des modèles, des contradictions. C'est ici que l'information devient renseignement.</li>
-		<li><strong>Diffusion :</strong> Le renseignement est mis en forme dans un rapport clair et concis pour être présenté à la personne ou à l'équipe qui en a besoin.</li>
-	</ul>
+    <h2><i class="fas fa-sync" aria-hidden="true"></i>Le Cycle du Renseignement</h2>
+    <p>Toute enquête OSINT professionnelle suit un processus structuré pour être efficace.</p>
+    <ul>
+        <li><strong>Définition des besoins :</strong> Quelle est la question exacte à laquelle je dois répondre ? (ex: "Quelles sont les technologies utilisées par notre concurrent ?").</li>
+        <li><strong>Collecte :</strong> C'est la phase de recherche active où l'on rassemble toutes les données brutes.</li>
+        <li><strong>Traitement :</strong> Cette étape consiste à organiser les données collectées : les trier, les filtrer, etc.</li>
+        <li><strong>Analyse :</strong> C'est le cœur du processus. On examine les données pour y trouver des liens et des modèles. C'est ici que l'information devient renseignement.</li>
+        <li><strong>Diffusion :</strong> Le renseignement est mis en forme dans un rapport clair et concis.</li>
+    </ul>
 </section>
 <section class="content-block">
-	<h2><i class="fas fa-sitemap" aria-hidden="true"></i>Les Grandes Disciplines de l'OSINT</h2>
-	<p>L'OSINT n'est pas une seule technique, mais un ensemble de disciplines spécialisées. En voici les principales :</p>
-	<h3>SOCMINT (social media intelligence)</h3>
-	<p>Le SOCMINT est une branche de l'OSINT spécialisée dans l'exploitation des informations issues des réseaux sociaux (Facebook, X/Twitter, Instagram, LinkedIn, TikTok, etc.).</p>
-	<ul>
-		<li><strong>Principe :</strong> Analyser les profils, les publications, les relations et les interactions pour construire une image complète d'une personne, d'un groupe ou d'un événement.</li>
-		<li><strong>Informations typiques :</strong> Listes d'amis/relations, photos, lieux visités (géolocalisation), centres d'intérêt, opinions politiques, dates d'événements, habitudes de vie.</li>
-		<li><strong>Outils clés :</strong> La recherche avancée des plateformes, comme celle de X (Twitter), est très puissante pour trouver des tweets par date, lieu, ou mot-clé. Par ailleurs, des outils comme <code>WhatsMyName.app</code> ou <code>Sherlock</code> permettent d'entrer un nom d'utilisateur et de vérifier sur des centaines de sites si un compte avec ce pseudo existe, révélant l'empreinte numérique d'une cible.</li>
-	</ul>
-	<h3>IMINT (image intelligence)</h3>
-	<p>L'IMINT se concentre sur l'analyse d'images et de vidéos. Une simple image peut contenir une mine d'informations.</p>
-	<p><strong>Recherche d'image inversée :</strong></p>
-	<ul>
-		<li><strong>Principe :</strong> Fournir une image à un moteur de recherche (au lieu de mots) pour qu'il trouve où cette image ou des images similaires apparaissent sur le web. C'est crucial pour vérifier l'authenticité d'une photo et trouver son contexte original.</li>
-		<li><strong>Outils :</strong> Google Images, TinEye, et Yandex (souvent plus performant pour la reconnaissance faciale).</li>
-	</ul>
-	<p><strong>Analyse des métadonnées (EXIF) :</strong></p>
-	<ul>
-		<li><strong>Principe :</strong> Les données <code>EXIF</code> sont des informations techniques enregistrées dans le fichier d'une image (type d'appareil, date/heure, et parfois coordonnées GPS). La plupart des réseaux sociaux les suppriment, mais ce n'est pas toujours le cas pour les images trouvées sur des blogs personnels, des forums ou des serveurs non protégés.</li>
-		<li><strong>Outils :</strong> Visionneuses EXIF en ligne (comme "EXIF Viewer") ou logiciels spécialisés.</li>
-	</ul>
-	<h3>GEOINT (geospatial intelligence)</h3>
-	<p>Le GEOINT consiste à exploiter des données géographiques et des images satellites pour en tirer des renseignements.</p>
-	<ul>
-		<li><strong>Principe :</strong> Utiliser des outils de cartographie pour localiser un lieu, analyser un environnement, ou suivre des déplacements. C'est le complément naturel de l'IMINT.</li>
-		<li><strong>Informations typiques :</strong> Identification d'un lieu à partir d'une photo, analyse de la sécurité d'un bâtiment, estimation de la date d'une image satellite, suivi de la déforestation ou de mouvements de navires.</li>
-		<li><strong>Outils :</strong> Google Maps (avec Street View et les photos des utilisateurs), Géoportail (le portail officiel du gouvernement français offrant des vues aériennes haute résolution et des cartes historiques), Sentinel Hub (pour des images satellites plus techniques et récentes).</li>
-	</ul>
-	<h3>SIGINT (signals intelligence)</h3>
-	<p>Dans le contexte de l'OSINT, le SIGINT ne concerne pas l'interception illégale, mais l'analyse des "signaux" techniques publiquement accessibles sur Internet. On le divise souvent en sous-catégories comme la Network Intelligence (NETINT).</p>
-	<ul>
-		<li><strong>Principe :</strong> Enquêter sur l'infrastructure technique d'un site web ou d'une organisation.</li>
-		<li><strong>Informations typiques :</strong> Qui est le propriétaire d'un nom de domaine (<code>WHOIS</code>), quels autres sites sont hébergés sur le même serveur (<code>Reverse IP</code>), quelles technologies sont utilisées par un site web, quels ports sont ouverts sur un serveur.</li>
-		<li><strong>Outils :</strong> WHOIS Lookup pour obtenir des informations sur l'enregistrement d'un nom de domaine. <code>Shodan.io</code>, un moteur de recherche pour les objets connectés à Internet (serveurs, webcams, etc.).</li>
-	</ul>
-	<h3>FININT (financial intelligence)</h3>
-	<p>Le FININT open-source se concentre sur la collecte d'informations financières à partir de sources publiques.</p>
-	<ul>
-		<li><strong>Principe :</strong> Analyser des données économiques pour comprendre la santé financière, la structure ou les activités d'une entreprise ou d'un individu.</li>
-		<li><strong>Informations typiques :</strong> Rapports annuels d'entreprises cotées, registres des entreprises (pour connaître les directeurs et les actionnaires), registres de propriété foncière, transactions publiques de cryptomonnaies.</li>
-		<li><strong>Outils :</strong> Registres de commerce nationaux (ex: Infogreffe en France), bases de données boursières (ex: Yahoo Finance), explorateurs de blockchain (ex: Etherscan pour Ethereum).</li>
-	</ul>
+    <h2><i class="fas fa-sitemap" aria-hidden="true"></i>Les Grandes Disciplines de l'OSINT</h2>
+    <p>L'OSINT n'est pas une seule technique, mais un ensemble de disciplines spécialisées.</p>
+    <h3>SOCMINT (social media intelligence)</h3>
+    <p>Le SOCMINT est spécialisé dans l'exploitation des informations issues des réseaux sociaux (Facebook, X/Twitter, Instagram, LinkedIn, etc.). La recherche avancée des plateformes est très puissante.</p>
+<pre><code># Exemple de recherche avancée sur X (Twitter)
+# Trouve les tweets du compte "LeMonde" parlant de "cybersécurité"
+# envoyés après le 1er janvier 2024.
+
+from:LeMonde "cybersécurité" since:2024-01-01</code></pre>
+    <p>
+        Des outils comme <code>WhatsMyName.app</code> ou <code>Sherlock</code> permettent d'entrer un nom d'utilisateur et de vérifier sur des centaines de sites si un compte avec ce pseudo existe.
+    </p>
+    <h3>IMINT (image intelligence)</h3>
+    <p>L'IMINT se concentre sur l'analyse d'images et de vidéos. La recherche d'image inversée (avec des outils comme <code>Google Images</code>, <code>TinEye</code>, ou <code>Yandex</code>) permet de trouver l'origine et le contexte d'une photo. L'analyse des métadonnées (<code>EXIF</code>) peut révéler des informations techniques cruciales.</p>
+<pre><code># Extrait de données EXIF d'une photo
+Make: Apple
+Model: iPhone XR
+Date/Time Original : 26/08/2025 11:00:15
+GPS Latitude : 44 deg 54' 58.819" N
+GPS Longitude : 4 deg 54' 46.82" E</code></pre>
+    <p>Pour visualiser ces données, on peut utiliser des outils en ligne comme "<code>EXIF Viewer</code>".</p>
+    <h3>GEOINT (geospatial intelligence)</h3>
+    <p>Le GEOINT consiste à exploiter des données géographiques, souvent en complément de l'IMINT. Les outils principaux sont <code>Google Maps</code> (avec Street View), <code>Géoportail</code> (pour des vues aériennes haute résolution en France) ou <code>Sentinel Hub</code> (pour des images satellites techniques).</p>
+    <h3>SIGINT (signals intelligence)</h3>
+    <p>Dans le contexte de l'OSINT, il s'agit d'analyser les "signaux" techniques publiquement accessibles, comme les informations sur un nom de domaine (<code>WHOIS</code>) ou les autres sites hébergés sur un même serveur (<code>Reverse IP</code>).</p>
+<pre><code># Résultat simplifié d'une recherche WHOIS
+Domain Name: exemple.fr
+Registrar: OVH SAS
+Creation Date: 2005-07-20
+Registrant Country: FR</code></pre>
+    <p>Un outil comme <code>Shodan.io</code> fonctionne comme un moteur de recherche pour les objets connectés à Internet (serveurs, webcams, etc.).</p>
+    <h3>FININT (financial intelligence)</h3>
+    <p>Le FININT open-source se concentre sur la collecte d'informations financières à partir de sources publiques, comme les registres des entreprises (<code>Infogreffe</code> en France), les bases de données boursières (<code>Yahoo Finance</code>) ou les explorateurs de blockchain (<code>Etherscan</code> pour Ethereum).</p>
 </section>
 <section class="content-block">
-	<h2 class="flex items-center"><i class="fas fa-flag-checkered" aria-hidden="true"></i>Conclusion</h2>
-	<h3>Récapitulatif des points clés :</h3>
-	<ul>
-		<li>L'OSINT est une discipline puissante et accessible qui consiste à transformer l'information publique en renseignement.</li>
-		<li>Le respect du cadre légal et éthique est non négociable.</li>
-		<li>La curiosité, la patience et la méthode sont vos meilleurs atouts.</li>
-	</ul>
-	<h3>Pistes pour aller plus loin :</h3>
-	<p>Pour approfondir le sujet, explorez les sites de Bellingcat et OSINT Curious, ainsi que les vidéos de The OSINT Curious Project sur YouTube pour voir des enquêtes réelles. Concernant les outils, le site OSINT Framework est une ressource incontournable : il s'agit d'une carte mentale interactive qui référence des centaines d'outils OSINT classés par catégorie.</p>
-	<p>La pratique est la clé. Continuez à explorer, à tester ces techniques sur des sujets qui vous intéressent (de manière éthique !), et vous serez surpris de tout ce que l'on peut apprendre à partir des sources ouvertes.</p>
+    <h2 class="flex items-center"><i class="fas fa-flag-checkered" aria-hidden="true"></i>Conclusion</h2>
+    <h3>Récapitulatif des points clés :</h3>
+    <ul>
+        <li>L'OSINT est une discipline puissante qui consiste à transformer l'information publique en renseignement.</li>
+        <li>Le respect du cadre légal et éthique est non négociable.</li>
+        <li>La curiosité, la patience et la méthode sont vos meilleurs atouts.</li>
+    </ul>
+    <h3>Pistes pour aller plus loin :</h3>
+    <p>Pour approfondir, explorez les sites de Bellingcat et OSINT Curious. Concernant les outils, le site OSINT Framework est une ressource incontournable : il s'agit d'une carte mentale interactive qui référence des centaines d'outils OSINT classés par catégorie.</p>
 </section>
